--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <h2 class="header">Kolokwium 10.12.2018</h2>
 
-<button class="button">Pokaż element</button>
+<button class="button">Ukryj element</button>
 
-
+<div class="main"></div>
+<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="logo.js"></script>
 </body>
 </html>
